--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="scan_ar_code_order_key">SCAN_AR_CODE</string>
     <string name="fire_laser_order_key">FIRE_LASER</string>
     <string name="play_sound_order_key">PLAY_SOUND</string>
+    <string name="finish_mission_order_key">FINISH_MISSION</string>
 
     <!-- Regex for move orders, fits decimal and non decimal variants of the following:
          {[1,2,3][1,2,3,4]}
