moved the string splitting and object creation for move orders into the OrderBuilder

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,9 @@
     -->
     <string name="order_split_character">|</string>
 
+    <!-- Character used to split numbers within brackets in move orders. Doesn't allow spaces -->
+    <string name="order_inner_split_character">,</string>
+
     <!--
     Order String section, Order strings consist of multiple robot orders following the formatting
     described above, separated by the order split character
