--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,13 +3,14 @@
 
     <string name="start_mission_order_key">START_MISSION</string>
     <string name="move_order_key">Do not use this, use the bracket format instead</string>
-    <string name="scan_ar_code_order_key">SCAN_AR_CODE</string>
-    <string name="fire_laser_order_key">FIRE_LASER</string>
+    <string name="scan_ar_code_order_key">SCAN_AR_CODE</string> <!-- Not currently implemented, waiting on AR team -->
+    <string name="fire_laser_order_key">FIRE_LASER</string> <!-- Not currently implemented, waiting on laser team -->
     <string name="finish_mission_order_key">FINISH_MISSION</string>
 
     <!-- Regex for move orders, fits decimal and non decimal variants of the following:
          {[1,2,3][1,2,3,4]}
          {[1.00,2,3][1.12,2.09,3.45,6.78910]}
+         {[+1,-2,+3.01][0,0,0,0]}
          Does not allow for spaces!
     -->
     <string name="move_order_regex_pattern">(?:\\{\\[)(([+|-]?\\d+([\\.]\\d+)?)[,]){2}([+|-]?\\d+([\\.]\\d+)?){1}(?:\\]\\[)(([+|-]?\\d+([\\.]\\d+)?)[,]){3}([+|-]?\\d+([\\.]\\d+)?){1}(?:\\]\\})</string>
