--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
 
     <string name="start_mission_order_key">START_MISSION</string>
     <string name="move_order_key">Do not use this, use the bracket format instead</string>
+    <string name="approach_firing_position_order_key">APPROACH_FIRING_POSITION</string>
     <string name="scan_ar_code_order_key">SCAN_AR_CODE</string> <!-- Not currently implemented, waiting on AR team -->
     <string name="fire_laser_order_key">FIRE_LASER</string> <!-- Not currently implemented, waiting on laser team -->
     <string name="finish_mission_order_key">FINISH_MISSION</string>
