--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="start_mission_order_key">START_MISSION</string>
     <string name="move_order_key">Do not use this, use the bracket format instead</string>
     <string name="approach_firing_position_order_key">APPROACH_FIRING_POSITION</string>
-    <string name="scan_ar_code_order_key">SCAN_AR_CODE</string> <!-- Not currently implemented, waiting on AR team -->
+    <string name="scan_qr_code_order_key">SCAN_QR_CODE</string>
     <string name="fire_laser_order_key">FIRE_LASER</string> <!-- Not currently implemented, waiting on laser team -->
     <string name="finish_mission_order_key">FINISH_MISSION</string>
 
@@ -17,7 +17,7 @@
     <string name="move_order_regex_pattern">(?:\\{\\[)(([+|-]?\\d+([\\.]\\d+)?)[,]){2}([+|-]?\\d+([\\.]\\d+)?){1}(?:\\]\\[)(([+|-]?\\d+([\\.]\\d+)?)[,]){3}([+|-]?\\d+([\\.]\\d+)?){1}(?:\\]\\})</string>
 
     <!-- Character used to split orders, doesn't allow for spaces. Expected look is:
-         {[1,2,3][1,2,3,4]}|SCAN_AR_CODE|{[1,2,3][1,2,3,4]}
+         {[1,2,3][1,2,3,4]}|SCAN_QR_CODE|{[1,2,3][1,2,3,4]}
     -->
     <string name="order_split_character">\\|</string>
     <!-- Character used to split numbers within brackets in move orders. Doesn't allow spaces -->
@@ -41,16 +41,16 @@
     Order String section, Order strings consist of multiple robot orders following the formatting
     described above, separated by the order split character
     -->
-    <string name="move_to_scan_order_string">START_MISSION|{[11.21,-9.8,4.79][0,0,-0.707,0.707]}</string>
+    <string name="move_to_scan_order_string">START_MISSION|{[11.21,-9.8,4.79][0,0,-0.707,0.707]}|SCAN_QR_CODE</string>
 
-    <string name="move_to_laser_order_string_variant_1">{[10.99,-9.8,4.79][0,0,-0.707,0.707]}|APPROACH_FIRING_POSITION|SCAN_AR_CODE|FIRE_LASER|{[11.21,-9.8,4.79][0,0,-0.707,0.707]}|{[10.51,-9.8,4.79][0,0,-0.707,0.707]}|{[10.51,-8.0,4.79][0,0,-0.707,0.707]}</string>
-    <string name="move_to_laser_order_string_variant_2">APPROACH_FIRING_POSITION|SCAN_AR_CODE|FIRE_LASER|{[11.21,-9.8,4.79][0,0,-0.707,0.707]}|{[10.51,-9.8,4.79][0,0,-0.707,0.707]}|{[10.51,-8.0,4.79][0,0,-0.707,0.707]}</string>
-    <string name="move_to_laser_order_string_variant_3">{[10.99,-9.8,4.79][0,0,-0.707,0.707]}|APPROACH_FIRING_POSITION|SCAN_AR_CODE|FIRE_LASER|{[10.99,-9.8,4.79][0,0,-0.707,0.707]}|{[10.51,-9.8,4.79][0,0,-0.707,0.707]}|{[10.51,-8.0,4.79][0,0,-0.707,0.707]}</string>
-    <string name="move_to_laser_order_string_variant_4">{[10.99,-9.8,4.79][0,0,-0.707,0.707]}|APPROACH_FIRING_POSITION|SCAN_AR_CODE|FIRE_LASER|{[10.99,-9.8,4.79][0,0,-0.707,0.707]}|{[10.51,-9.8,4.79][0,0,-0.707,0.707]}|{[10.51,-8.0,4.79][0,0,-0.707,0.707]}</string>
-    <string name="move_to_laser_order_string_variant_5">{[10.61,-9.8,4.79][0,0,-0.707,0.707]}|{10.62,-9.8,5.45][0,0,-0.707,0.707]}|APPROACH_FIRING_POSITION|SCAN_AR_CODE|FIRE_LASER|{[10.51,-9.8,5.45][0,0,-0.707,0.707]}|{[10.51,-9.8,4.79][0,0,-0.707,0.707]}|{[10.51,-8.0,4.79][0,0,-0.707,0.707]}</string>
-    <string name="move_to_laser_order_string_variant_6">{[10.61,-9.8,4.79][0,0,-0.707,0.707]}|{10.62,-9.8,5.45][0,0,-0.707,0.707]}|APPROACH_FIRING_POSITION|SCAN_AR_CODE|FIRE_LASER|{[10.51,-9.8,4.79][0,0,-0.707,0.707]}|{[10.51,-8.0,4.79][0,0,-0.707,0.707]</string>
-    <string name="move_to_laser_order_string_variant_7">{[10.62,-9.8,4.79][0,0,-0.707,0.707}|{[10.62,-9.8,5.45][0,0,-0.707,0.707}]|{[11.21,-9.8,5.45][0,0,-0.707,0.707}]|APPROACH_FIRING_POSITION|SCAN_AR_CODE|FIRE_LASER|{[11.21,-9.8,5.45][0,0,-0.707,0.707]}|{[10.51,-9.8,5.45][0,0,-0.707,0.707]}|{[10.51,-8.0,4.79][0,0,-0.707,0.707]</string>
-    <string name="move_to_laser_order_string_variant_8">{[10.62,-9.8,4.79][0,0,-0.707,0.707]}|{[10.62,-9.8,5.45][0,0,-0.707,0.707}]|{[11.21,-9.8,5.45][0,0,-0.707,0.707}]|APPROACH_FIRING_POSITION|SCAN_AR_CODE|FIRE_LASER|{[11.21,-9.8,5.45][0,0,-0.707,0.707]}|{[10.51,-9.8,5.45][0,0,-0.707,0.707]}|{[10.51,-8.0,4.79][0,0,-0.707,0.707]</string>
+    <string name="move_to_laser_order_string_variant_1">{[10.99,-9.8,4.79][0,0,-0.707,0.707]}|APPROACH_FIRING_POSITION|FIRE_LASER|{[11.21,-9.8,4.79][0,0,-0.707,0.707]}|{[10.51,-9.8,4.79][0,0,-0.707,0.707]}|{[10.51,-8.0,4.79][0,0,-0.707,0.707]}</string>
+    <string name="move_to_laser_order_string_variant_2">APPROACH_FIRING_POSITION|FIRE_LASER|{[11.21,-9.8,4.79][0,0,-0.707,0.707]}|{[10.51,-9.8,4.79][0,0,-0.707,0.707]}|{[10.51,-8.0,4.79][0,0,-0.707,0.707]}</string>
+    <string name="move_to_laser_order_string_variant_3">{[10.99,-9.8,4.79][0,0,-0.707,0.707]}|APPROACH_FIRING_POSITION|FIRE_LASER|{[10.99,-9.8,4.79][0,0,-0.707,0.707]}|{[10.51,-9.8,4.79][0,0,-0.707,0.707]}|{[10.51,-8.0,4.79][0,0,-0.707,0.707]}</string>
+    <string name="move_to_laser_order_string_variant_4">{[10.99,-9.8,4.79][0,0,-0.707,0.707]}|APPROACH_FIRING_POSITION|FIRE_LASER|{[10.99,-9.8,4.79][0,0,-0.707,0.707]}|{[10.51,-9.8,4.79][0,0,-0.707,0.707]}|{[10.51,-8.0,4.79][0,0,-0.707,0.707]}</string>
+    <string name="move_to_laser_order_string_variant_5">{[10.61,-9.8,4.79][0,0,-0.707,0.707]}|{10.62,-9.8,5.45][0,0,-0.707,0.707]}|APPROACH_FIRING_POSITION|FIRE_LASER|{[10.51,-9.8,5.45][0,0,-0.707,0.707]}|{[10.51,-9.8,4.79][0,0,-0.707,0.707]}|{[10.51,-8.0,4.79][0,0,-0.707,0.707]}</string>
+    <string name="move_to_laser_order_string_variant_6">{[10.61,-9.8,4.79][0,0,-0.707,0.707]}|{10.62,-9.8,5.45][0,0,-0.707,0.707]}|APPROACH_FIRING_POSITION|FIRE_LASER|{[10.51,-9.8,4.79][0,0,-0.707,0.707]}|{[10.51,-8.0,4.79][0,0,-0.707,0.707]</string>
+    <string name="move_to_laser_order_string_variant_7">{[10.62,-9.8,4.79][0,0,-0.707,0.707}|{[10.62,-9.8,5.45][0,0,-0.707,0.707}]|{[11.21,-9.8,5.45][0,0,-0.707,0.707}]|APPROACH_FIRING_POSITION|FIRE_LASER|{[11.21,-9.8,5.45][0,0,-0.707,0.707]}|{[10.51,-9.8,5.45][0,0,-0.707,0.707]}|{[10.51,-8.0,4.79][0,0,-0.707,0.707]</string>
+    <string name="move_to_laser_order_string_variant_8">{[10.62,-9.8,4.79][0,0,-0.707,0.707]}|{[10.62,-9.8,5.45][0,0,-0.707,0.707}]|{[11.21,-9.8,5.45][0,0,-0.707,0.707}]|APPROACH_FIRING_POSITION|FIRE_LASER|{[11.21,-9.8,5.45][0,0,-0.707,0.707]}|{[10.51,-9.8,5.45][0,0,-0.707,0.707]}|{[10.51,-8.0,4.79][0,0,-0.707,0.707]</string>
 
     <string name="move_to_finish_order_string">{[10.6,-8.0,4.5][0,0,-0.707,0.707]}|FINISH_MISSION</string>
 
